fix(client): preserve white spaces in message

--- a/client/src/components/Message.css
+++ b/client/src/components/Message.css
@@ -6,6 +6,7 @@
 
 .message-container .message {
   font-family: "Open Sans";
+  white-space: pre-wrap;
   word-break: break-all;
   font-size: 0.9rem;
 }
